Fix layout on mobile

--- a/style.css
+++ b/style.css
@@ -3,3 +3,12 @@ main {
   flex-direction: column;
   align-items: center;
 }
+
+#pokemon {
+  display: flex;
+  justify-content: center;
+}
+
+img {
+  max-width: 80%;
+}
